samples/_failures_safe/1761335032_2619e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_debef33f.c: In function ‘main’:
./samples/SAFE/__tmp_debef33f.c:146: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_debef33f.c:145:5: error: expected declaration or statement at end of input
  145 |     if
      |     ^~
